<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mountain Track</string>
    <string name="start_hike">Start Hike</string>
    <string name="stop_hike">Stop Hike</string>
    <string name="view_track">View Track</string>
    <string name="find_trails">Find Trails</string>
    <string name="exit_recording">Stop recording?</string>
    <string name="exit_recording_msg">If you leave now, the current track and photos will not be saved.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="favorites">Favorites</string>
    <string name="trail">Trail: </string>
    <string name="view_on_map">View on map</string>
    <string name="trail_name">Trail name</string>
    <string name="remove_from_favorites">Deletes/Adds the trail in favorites.</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="photos">Photos</string>
    <string name="search_by_name">Search trail by name.</string>
    <string name="back_to_map">Back to map</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="map_not_ready">The map is still not ready.</string>
    <string name="no_saved_trail">No saved trail.</string>
    <string name="no_saved_trail_for_stopping">No saved trail for stopping.</string>
    <string name="no_trail">No trail.</string>
    <string name="no_permission_for_location_access">No permission for location access</string>
    <string name="trail_description">Trail description</string>
    <string name="save_trail_and_images">Save trail and photos</string>
    <string name="dialog_hint_save_trail">Give a name and description to your trail or click on "No" to cancel.</string>
    <string name="save">Save</string>
    <string name="no_name">No name</string>
    <string name="no">No</string>
    <string name="trail_not_saved">Trail not saved.</string>
    <string name="image_saved">Image saved: </string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="location_unavailable_no_picture">Location has to be available to take a picture! Click on "Start Hike" to enable it.</string>
    <string name="camera_permission_needed">Camera permission needed</string>
    <string name="img_not_found">Image not found</string>
    <string name="photo">Photo</string>
    <string name="close">Close</string>
    <string name="deletion_successful">Photo and marker, deleted!</string>
    <string name="deletion_unsuccessful">Photo deletion unsuccessful!</string>
    <string name="no_saved_favorite_trails">No favorite trails</string>
    <string name="no_available_trail_points">No trail points for this trail</string>
    <string name="no_available_photos">No photos yet</string>
    <string name="no_deletion_for_default_trails">Only user created trails can be deleted!</string>
    <string name="trail_deletion">Trail deletion</string>
    <string name="deletion_question_part1">Are you sure you want to delete trail \"</string>
    <string name="deletion_question_part2">\"? This will also delete the photos you made while hiking!</string>
    <string name="trail_deleted">Trail deleted</string>
    <string name="photo_deletion">Photo deletion</string>
    <string name="photo_deletion_confirmation">Are you sure you want to delete this photo?</string>
    <string name="photo_deleted">Photo deleted!</string>
    <string name="no_saved_my_trails">Still no "My" trails were saved</string>
    <string name="trail_images_successfully_saved">The trails and photos were saved successfully.</string>
    <string name="format_break_info">Trail: %.1f km\nRemaining: %.1f km\nTime: %s\nBreak time: </string>
    <string name="help_info_default">Trail: 0.0 km\nRemaining: 0.0 km\nTime: 0:00\nBreaks: 0</string>
    <string name="no_images_atm">Still no images for now</string>

</resources>
