<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:navigationBarColor="@color/black"
    android:fitsSystemWindows="true">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTrails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerImages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="2dp"
        android:background="#EDEDED"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_to_map"
            android:src="@drawable/map_icon"
            android:layout_marginRight="2dp"
            android:tooltipText="@string/back_to_map" />

        <Button
            android:id="@+id/btnAllTrails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/all"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:backgroundTint="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnMyTrails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/my"
            android:backgroundTint="#000000"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnViewImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:singleLine="true"
            android:text="@string/photos"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            android:textSize="14sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:background="#F0F0F0"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:hint="@string/search_by_name"
            android:inputType="textCapSentences|text"
            android:textColorHint="#737373"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/favorites"
            android:src="@drawable/favorites"
            android:tooltipText="@string/favorites" />
    </LinearLayout>

    </LinearLayout>