<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:padding="8dp"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    cardCornerRadius="8dp"
    android:minHeight="120dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image -->
        <ImageView
            android:id="@+id/image"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/common_full_open_on_phone" />

        <!-- Text + Buttons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <!-- Buttons row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <!-- View Trail button -->
                <Button
                    android:id="@+id/btnViewTrail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_on_map"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#43A047"
                    android:textSize="16sp"/>

                <!-- Favorite Button -->
                <ImageButton
                    android:id="@+id/btnDeleteImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/trashbin_button"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/photo_deletion" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textTrail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trail"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/fieldTrail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
